<resources>
    <string name="app_name">VitaCheck</string>
    
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <string name="title_activity_main">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_vitals">Vitals</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_register">RegisterActivity</string>

    <!-- Strings related to register -->
    <string name="prompt_name">Name</string>
    <string name="prompt_password_confirm">Confirm Password</string>
    <string name="prompt_dob">Date of Birth</string>
    <string name="prompt_weight">Weight</string>

    <!--  Strings related to doctors -->
    <string name="title_doctor_home_page">Doctors</string>
    <string name="doctor">Doctor</string>
    <string name="saved_doctors">Saved Doctors</string>
    <string name="edit_doctor">Edit Doctor</string>
    <string name="add_Doctor">Add Doctor</string>
    <string name="save_changes">Save Changes</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="insurance">Insurance</string>
    <string name="phone_number">Phone #</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="website_link">Website</string>
    <string name="vist_datas">Visit Dates</string>

</resources>
